# guacamole-oculus

./: CMakeLists.txt
cmake/modules/: find_guacamole.cmake  find_ovr.cmake
example/: CMakeLists.txt  main.cpp
include/gua/: OculusRift.hpp
scripts/: guacamole-oculus.sublime-project
src/: CMakeLists.txt
src/gua/: OculusRift.cpp
