# determine source and header files
file(GLOB_RECURSE EXAMPLE_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c *.cpp *.cc)

GET_FILENAME_COMPONENT(_EXE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
SET(_EXE_NAME ${_EXE_NAME}.out)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

LIST(APPEND LIB_PATHS ${CMAKE_SOURCE_DIR}/lib)
LINK_DIRECTORIES(${LIB_PATHS})

ADD_EXECUTABLE( ${_EXE_NAME}
    ${EXAMPLE_SRC}
)

ADD_DEPENDENCIES(${_EXE_NAME} guacamole-oculus)

TARGET_LINK_LIBRARIES( ${_EXE_NAME} debug ${LIBS} guacamole-oculus optimized ${LIBS} guacamole-oculus)
